[gd_scene load_steps=95 format=3 uid="uid://blos4rn53qkwg"]

[ext_resource type="Script" path="res://sources/minigames/base/kalulu.gd" id="1_iin3v"]
[ext_resource type="Texture2D" uid="uid://berypn513y7ts" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_hide_0000.png" id="2_j1eau"]
[ext_resource type="Texture2D" uid="uid://ctkb46hb7gd47" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_hide_0001.png" id="3_1vwio"]
[ext_resource type="Texture2D" uid="uid://c7111uqtcrkek" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_hide_0002.png" id="4_k0lwt"]
[ext_resource type="Texture2D" uid="uid://dsbiou1nvx7n4" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_hide_0003.png" id="5_buyf4"]
[ext_resource type="Texture2D" uid="uid://dtls2d4o1grgt" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_hide_0004.png" id="6_b2lt8"]
[ext_resource type="Texture2D" uid="uid://ctdtir4machdd" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_hide_0005.png" id="7_nspaa"]
[ext_resource type="Texture2D" uid="uid://kd5rr141wuvd" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_hide_0006.png" id="8_1kevx"]
[ext_resource type="Texture2D" uid="uid://dwposw1jvybvi" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_hide_0007.png" id="9_6e07g"]
[ext_resource type="Texture2D" uid="uid://b4dwaw1eyn7h2" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_hide_0008.png" id="10_rk1ju"]
[ext_resource type="Texture2D" uid="uid://cnx4dyv6u8j6q" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_hide_0009.png" id="11_j4abv"]
[ext_resource type="Texture2D" uid="uid://dtiwcj457j2et" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_hide_0010.png" id="12_042gb"]
[ext_resource type="Texture2D" uid="uid://bi3nngrurvdv" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_hide_0011.png" id="13_co335"]
[ext_resource type="Texture2D" uid="uid://dum0umkxfsvr" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_idle01_0000.png" id="14_0cqmm"]
[ext_resource type="Texture2D" uid="uid://eedcxhmtdfpt" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_idle01_0001.png" id="15_74ekh"]
[ext_resource type="Texture2D" uid="uid://bqahvqtfy8mm2" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_idle01_0002.png" id="16_ppf52"]
[ext_resource type="Texture2D" uid="uid://qa6x66pvjkpl" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_idle01_0003.png" id="17_jdag7"]
[ext_resource type="Texture2D" uid="uid://c2aplxlmmdocq" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_idle01_0004.png" id="18_f2qa8"]
[ext_resource type="Texture2D" uid="uid://de4v2um8bgdrr" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_idle01_0005.png" id="19_qdkbb"]
[ext_resource type="Texture2D" uid="uid://bvjex7ug0gblu" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_idle01_0006.png" id="20_uuxk2"]
[ext_resource type="Texture2D" uid="uid://ccp1d4a7n33d2" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_idle01_0008.png" id="21_bkqol"]
[ext_resource type="Texture2D" uid="uid://bmd11sl8vlkbu" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_idle01_0009.png" id="22_txi5d"]
[ext_resource type="Texture2D" uid="uid://xwrolsodxfwj" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_idle01_0010.png" id="23_uhsgt"]
[ext_resource type="Texture2D" uid="uid://fpmii24xherk" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_idle01_0011.png" id="24_15wr3"]
[ext_resource type="Texture2D" uid="uid://q1c0u84gnlas" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_idle02_0000.png" id="25_uedmy"]
[ext_resource type="Texture2D" uid="uid://1jitvy4js6vs" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_idle02_0001.png" id="26_ygjgh"]
[ext_resource type="Texture2D" uid="uid://i0e10jv7abau" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_idle02_0002.png" id="27_5bl3x"]
[ext_resource type="Texture2D" uid="uid://boclndp8mfhx7" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_idle02_0003.png" id="28_d0u14"]
[ext_resource type="Texture2D" uid="uid://6j4jsvj7ijew" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_idle02_0004.png" id="29_bo163"]
[ext_resource type="Texture2D" uid="uid://c4jntnjjfaspt" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_idle02_0005.png" id="30_pokfm"]
[ext_resource type="Texture2D" uid="uid://2few373mdjwu" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_idle02_0006.png" id="31_2k5cb"]
[ext_resource type="Texture2D" uid="uid://cmd2rlspcjsw" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_idle02_0007.png" id="32_t0v8s"]
[ext_resource type="Texture2D" uid="uid://3pejdlg4gvfx" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_idle02_0008.png" id="33_rbd7x"]
[ext_resource type="Texture2D" uid="uid://bc05ecw2vopvk" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_idle02_0009.png" id="34_1dfks"]
[ext_resource type="Texture2D" uid="uid://cfadlsc1yqnm8" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_idle02_0010.png" id="35_wpbnf"]
[ext_resource type="Texture2D" uid="uid://dfwoh4t5ciwhv" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_idle02_0011.png" id="36_8nor4"]
[ext_resource type="Texture2D" uid="uid://bxea88k62e1aa" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_show_0000.png" id="37_4qvi6"]
[ext_resource type="Texture2D" uid="uid://btwa0vg4iipcd" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_show_0001.png" id="38_2qjfu"]
[ext_resource type="Texture2D" uid="uid://cj7ei8wstn7hw" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_show_0002.png" id="39_bgrb5"]
[ext_resource type="Texture2D" uid="uid://s28i672il66" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_show_0003.png" id="40_7kawf"]
[ext_resource type="Texture2D" uid="uid://bs1uppljr8c1j" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_show_0004.png" id="41_w87j3"]
[ext_resource type="Texture2D" uid="uid://cmc60bsqwblus" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_show_0005.png" id="42_rhyef"]
[ext_resource type="Texture2D" uid="uid://bea805v3kuijo" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_show_0006.png" id="43_4mpy6"]
[ext_resource type="Texture2D" uid="uid://bj3w5qq5bg3uu" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_show_0007.png" id="44_nuocl"]
[ext_resource type="Texture2D" uid="uid://bq2icekegojbo" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_show_0008.png" id="45_6pkwc"]
[ext_resource type="Texture2D" uid="uid://iklrbski84cl" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_show_0009.png" id="46_wlofg"]
[ext_resource type="Texture2D" uid="uid://bijmoml1y7wvb" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_show_0010.png" id="47_t7tcw"]
[ext_resource type="Texture2D" uid="uid://c1k504v08kvc2" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_show_0011.png" id="48_3ukpt"]
[ext_resource type="Texture2D" uid="uid://lwckax8t7tl6" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_show_0012.png" id="49_0oeip"]
[ext_resource type="Texture2D" uid="uid://djduqpeuuxt40" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_show_0013.png" id="50_rgine"]
[ext_resource type="Texture2D" uid="uid://ctv36bnfotdx5" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_show_0014.png" id="51_m3khh"]
[ext_resource type="Texture2D" uid="uid://7f13jtlhl5oq" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_show_0015.png" id="52_kb4lk"]
[ext_resource type="Texture2D" uid="uid://c7o0y7wjvotuf" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_talk1_0000.png" id="53_fdffu"]
[ext_resource type="Texture2D" uid="uid://dbsx5sy02j3du" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_talk1_0001.png" id="54_vvxfg"]
[ext_resource type="Texture2D" uid="uid://cuxydkhip7vgj" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_talk1_0002.png" id="55_6828q"]
[ext_resource type="Texture2D" uid="uid://cjb1swlfloh1" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_talk1_0003.png" id="56_185kc"]
[ext_resource type="Texture2D" uid="uid://1gfia6ydt5ct" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_talk1_0004.png" id="57_j7dw3"]
[ext_resource type="Texture2D" uid="uid://cebafgtvfq1wh" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_talk1_0005.png" id="58_md4vy"]
[ext_resource type="Texture2D" uid="uid://f6rlb07xqh3w" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_talk1_0006.png" id="59_mp3yb"]
[ext_resource type="Texture2D" uid="uid://wcmx3hflqgxa" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_talk1_0007.png" id="60_xuikt"]
[ext_resource type="Texture2D" uid="uid://yl1gpuuy2l7g" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_talk1_0008.png" id="61_n4655"]
[ext_resource type="Texture2D" uid="uid://cgo8py1xybuhq" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_talk1_0009.png" id="62_3otbs"]
[ext_resource type="Texture2D" uid="uid://csncsroueedfx" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_talk1_0010.png" id="63_jgd8g"]
[ext_resource type="Texture2D" uid="uid://dljmjvqlnljw5" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_talk1_0011.png" id="64_8c2jx"]
[ext_resource type="Texture2D" uid="uid://cpfr4rjv6xw0f" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_talk2_0000.png" id="65_cwy80"]
[ext_resource type="Texture2D" uid="uid://b1ycakbu1w2fb" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_talk2_0001.png" id="66_yco7j"]
[ext_resource type="Texture2D" uid="uid://bwbt8dclrfopx" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_talk2_0002.png" id="67_7cskj"]
[ext_resource type="Texture2D" uid="uid://vn7orptuhyqw" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_talk2_0003.png" id="68_s1wgy"]
[ext_resource type="Texture2D" uid="uid://bjla8n25s2wve" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_talk2_0004.png" id="69_4rqe1"]
[ext_resource type="Texture2D" uid="uid://bpufqx3c1575s" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_talk2_0005.png" id="70_wtcb5"]
[ext_resource type="Texture2D" uid="uid://cglywtrymihck" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_talk2_0006.png" id="71_mh6j6"]
[ext_resource type="Texture2D" uid="uid://d37o4pf4l4h72" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_talk2_0007.png" id="72_oqalq"]
[ext_resource type="Texture2D" uid="uid://bbw1s5bg1tt5k" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_talk2_0008.png" id="73_xutt7"]
[ext_resource type="Texture2D" uid="uid://bkgag2ys4rhm7" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_talk2_0009.png" id="74_6jxbr"]
[ext_resource type="Texture2D" uid="uid://dh5wpxc4hr8i4" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_talk2_0010.png" id="75_364rj"]
[ext_resource type="Texture2D" uid="uid://dy0hj8s05p81n" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_talk2_0011.png" id="76_w3uiy"]
[ext_resource type="Texture2D" uid="uid://lp8chel2geve" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_talk3_0000.png" id="77_g0nt5"]
[ext_resource type="Texture2D" uid="uid://d204sk1opwvq2" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_talk3_0001.png" id="78_gscrg"]
[ext_resource type="Texture2D" uid="uid://cgvccxcot7aan" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_talk3_0002.png" id="79_8imjg"]
[ext_resource type="Texture2D" uid="uid://bccqkgwd4r6sd" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_talk3_0003.png" id="80_glcbm"]
[ext_resource type="Texture2D" uid="uid://b7jpic8xukj4s" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_talk3_0004.png" id="81_4h7a6"]
[ext_resource type="Texture2D" uid="uid://ssjqyvgi0tq" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_talk3_0005.png" id="82_t1lnn"]
[ext_resource type="Texture2D" uid="uid://b1lnl2080k8r1" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_talk3_0006.png" id="83_q7bno"]
[ext_resource type="Texture2D" uid="uid://ciqgubhp7y2ih" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_talk3_0007.png" id="84_cwpgo"]
[ext_resource type="Texture2D" uid="uid://dip0ukd0mgymi" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_talk3_0008.png" id="85_6q12t"]
[ext_resource type="Texture2D" uid="uid://bnx1ev6hm87eq" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_talk3_0009.png" id="86_gd0v2"]
[ext_resource type="Texture2D" uid="uid://e8jdvvlkpa4x" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_talk3_0010.png" id="87_07fg4"]
[ext_resource type="Texture2D" uid="uid://cmo15wsithfdh" path="res://assets/minigames/minigame_ui/graphic/kalulu/kalulu_talk3_0011.png" id="88_ocywr"]

[sub_resource type="SpriteFrames" id="SpriteFrames_igr4d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_j1eau")
}, {
"duration": 1.0,
"texture": ExtResource("3_1vwio")
}, {
"duration": 1.0,
"texture": ExtResource("4_k0lwt")
}, {
"duration": 1.0,
"texture": ExtResource("5_buyf4")
}, {
"duration": 1.0,
"texture": ExtResource("6_b2lt8")
}, {
"duration": 1.0,
"texture": ExtResource("7_nspaa")
}, {
"duration": 1.0,
"texture": ExtResource("8_1kevx")
}, {
"duration": 1.0,
"texture": ExtResource("9_6e07g")
}, {
"duration": 1.0,
"texture": ExtResource("10_rk1ju")
}, {
"duration": 1.0,
"texture": ExtResource("11_j4abv")
}, {
"duration": 1.0,
"texture": ExtResource("12_042gb")
}, {
"duration": 1.0,
"texture": ExtResource("13_co335")
}],
"loop": false,
"name": &"Hide",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_0cqmm")
}, {
"duration": 1.0,
"texture": ExtResource("15_74ekh")
}, {
"duration": 1.0,
"texture": ExtResource("16_ppf52")
}, {
"duration": 1.0,
"texture": ExtResource("17_jdag7")
}, {
"duration": 1.0,
"texture": ExtResource("18_f2qa8")
}, {
"duration": 1.0,
"texture": ExtResource("19_qdkbb")
}, {
"duration": 1.0,
"texture": ExtResource("20_uuxk2")
}, {
"duration": 1.0,
"texture": ExtResource("21_bkqol")
}, {
"duration": 1.0,
"texture": ExtResource("22_txi5d")
}, {
"duration": 1.0,
"texture": ExtResource("23_uhsgt")
}, {
"duration": 1.0,
"texture": ExtResource("24_15wr3")
}],
"loop": false,
"name": &"Idle1",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("25_uedmy")
}, {
"duration": 1.0,
"texture": ExtResource("26_ygjgh")
}, {
"duration": 1.0,
"texture": ExtResource("27_5bl3x")
}, {
"duration": 1.0,
"texture": ExtResource("28_d0u14")
}, {
"duration": 1.0,
"texture": ExtResource("29_bo163")
}, {
"duration": 1.0,
"texture": ExtResource("30_pokfm")
}, {
"duration": 1.0,
"texture": ExtResource("31_2k5cb")
}, {
"duration": 1.0,
"texture": ExtResource("32_t0v8s")
}, {
"duration": 1.0,
"texture": ExtResource("33_rbd7x")
}, {
"duration": 1.0,
"texture": ExtResource("34_1dfks")
}, {
"duration": 1.0,
"texture": ExtResource("35_wpbnf")
}, {
"duration": 1.0,
"texture": ExtResource("36_8nor4")
}],
"loop": false,
"name": &"Idle2",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("37_4qvi6")
}, {
"duration": 1.0,
"texture": ExtResource("38_2qjfu")
}, {
"duration": 1.0,
"texture": ExtResource("39_bgrb5")
}, {
"duration": 1.0,
"texture": ExtResource("40_7kawf")
}, {
"duration": 1.0,
"texture": ExtResource("41_w87j3")
}, {
"duration": 1.0,
"texture": ExtResource("42_rhyef")
}, {
"duration": 1.0,
"texture": ExtResource("43_4mpy6")
}, {
"duration": 1.0,
"texture": ExtResource("44_nuocl")
}, {
"duration": 1.0,
"texture": ExtResource("45_6pkwc")
}, {
"duration": 1.0,
"texture": ExtResource("46_wlofg")
}, {
"duration": 1.0,
"texture": ExtResource("47_t7tcw")
}, {
"duration": 1.0,
"texture": ExtResource("48_3ukpt")
}, {
"duration": 1.0,
"texture": ExtResource("49_0oeip")
}, {
"duration": 1.0,
"texture": ExtResource("50_rgine")
}, {
"duration": 1.0,
"texture": ExtResource("51_m3khh")
}, {
"duration": 1.0,
"texture": ExtResource("52_kb4lk")
}],
"loop": false,
"name": &"Show",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("53_fdffu")
}, {
"duration": 1.0,
"texture": ExtResource("54_vvxfg")
}, {
"duration": 1.0,
"texture": ExtResource("55_6828q")
}, {
"duration": 1.0,
"texture": ExtResource("56_185kc")
}, {
"duration": 1.0,
"texture": ExtResource("57_j7dw3")
}, {
"duration": 1.0,
"texture": ExtResource("58_md4vy")
}, {
"duration": 1.0,
"texture": ExtResource("59_mp3yb")
}, {
"duration": 1.0,
"texture": ExtResource("60_xuikt")
}, {
"duration": 1.0,
"texture": ExtResource("61_n4655")
}, {
"duration": 1.0,
"texture": ExtResource("62_3otbs")
}, {
"duration": 1.0,
"texture": ExtResource("63_jgd8g")
}, {
"duration": 1.0,
"texture": ExtResource("64_8c2jx")
}],
"loop": false,
"name": &"Talk1",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("65_cwy80")
}, {
"duration": 1.0,
"texture": ExtResource("66_yco7j")
}, {
"duration": 1.0,
"texture": ExtResource("67_7cskj")
}, {
"duration": 1.0,
"texture": ExtResource("68_s1wgy")
}, {
"duration": 1.0,
"texture": ExtResource("69_4rqe1")
}, {
"duration": 1.0,
"texture": ExtResource("70_wtcb5")
}, {
"duration": 1.0,
"texture": ExtResource("71_mh6j6")
}, {
"duration": 1.0,
"texture": ExtResource("72_oqalq")
}, {
"duration": 1.0,
"texture": ExtResource("73_xutt7")
}, {
"duration": 1.0,
"texture": ExtResource("74_6jxbr")
}, {
"duration": 1.0,
"texture": ExtResource("75_364rj")
}, {
"duration": 1.0,
"texture": ExtResource("76_w3uiy")
}],
"loop": false,
"name": &"Talk2",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("77_g0nt5")
}, {
"duration": 1.0,
"texture": ExtResource("78_gscrg")
}, {
"duration": 1.0,
"texture": ExtResource("79_8imjg")
}, {
"duration": 1.0,
"texture": ExtResource("80_glcbm")
}, {
"duration": 1.0,
"texture": ExtResource("81_4h7a6")
}, {
"duration": 1.0,
"texture": ExtResource("82_t1lnn")
}, {
"duration": 1.0,
"texture": ExtResource("83_q7bno")
}, {
"duration": 1.0,
"texture": ExtResource("84_cwpgo")
}, {
"duration": 1.0,
"texture": ExtResource("85_6q12t")
}, {
"duration": 1.0,
"texture": ExtResource("86_gd0v2")
}, {
"duration": 1.0,
"texture": ExtResource("87_07fg4")
}, {
"duration": 1.0,
"texture": ExtResource("88_ocywr")
}],
"loop": false,
"name": &"Talk3",
"speed": 12.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y6gsq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1hd4y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dvlyl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cd4qd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iqd4x"]

[node name="Kalulu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iin3v")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.164706, 0.164706, 0.164706, 0.67451)

[node name="KaluluSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(565, 1407)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_igr4d")
animation = &"Hide"

[node name="PassButton" type="Button" parent="KaluluSprite"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -135.0
offset_top = -146.0
offset_right = -165.0
offset_bottom = -381.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_y6gsq")
theme_override_styles/hover = SubResource("StyleBoxEmpty_1hd4y")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_dvlyl")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_cd4qd")
theme_override_styles/focus = SubResource("StyleBoxEmpty_iqd4x")
flat = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"Voice"

[connection signal="animation_finished" from="KaluluSprite" to="." method="_on_kalulu_sprite_animation_finished"]
[connection signal="pressed" from="KaluluSprite/PassButton" to="." method="_on_pass_button_pressed"]
